# pam-ed25519

./: Cargo.toml  README.md
.github/workflows/: release.yaml
authenticator/: Cargo.toml  build.rs
conf/: ed25519-auth
src/: lib.rs  main.rs  shared.rs
